# voysys-dmx

./: Cargo.toml  README.md  state.json
dmx-client/: .gitignore  Cargo.toml  index.html  rust-toolchain
dmx-client/src/: channel.rs  dmx_device.rs  dmx_gui.rs  main.rs  timeline.rs
dmx-client/src/dmx_device/: px_hex_5.rs
dmx-server/: Cargo.toml
dmx-server/src/: main.rs
dmx-shared/: Cargo.toml
dmx-shared/src/: lib.rs
