[package]
name = "dmx-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.24", features = ["persistence"] }
serde = "1"
serde_json = "1"
tracing-subscriber = "0.3"
zerocopy = { version = "0.7", features = ["derive"] }
zerocopy-derive = "0.7"
