[package]
name = "dmx-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
log = "0.4"
dmx-shared = { path = "../dmx-shared" }
eframe = { version = "0.24", features = ["persistence"] }
ewebsock = "0.4"
serde = "1"
serde_json = "1"

tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
